# qrcode-restore

./: .gitignore  Cargo.toml  NOTICE  README.md
browser/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
browser/src/: App.test.tsx  App.tsx  artifacts.ts  batch-race.test.ts  batch-race.ts  image-io.ts  main.tsx  parallelism.test.ts  parallelism.ts  recovery.test.ts  recovery.worker.ts  styles.css  types.ts  variant-batch.worker.ts  vite-env.d.ts
crates/qr-restore-wasm/: Cargo.toml  LICENSE
crates/qr-restore-wasm/examples/: generate_samples.rs
crates/qr-restore-wasm/src/: image_ops.rs  lib.rs  recovery.rs
docs/: algorithm.md
